// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button renders according to variant 1`] = `
<Button__StyledButton
  primary={true}
>
  Button
</Button__StyledButton>
`;

exports[`components/Button renders according to variant 2`] = `
<Button__StyledButton
  secondary={true}
>
  Button
</Button__StyledButton>
`;

exports[`components/Button renders according to variant 3`] = `
<Button__StyledButton
  tertiary={true}
>
  Button
</Button__StyledButton>
`;

exports[`components/Button renders according to variant 4`] = `
<Button__StyledButton
  clear={true}
>
  Button
</Button__StyledButton>
`;

exports[`components/Button renders as disabled 1`] = `
<Button__StyledButton
  disabled={true}
>
  Button
</Button__StyledButton>
`;
